--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Autocomplete",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./tests/*.js | tap-spec",
+    "devStart": "nodemon src/server.js",
+    "coverage": "./node_modules/.bin/istanbul cover tape ./tests/*.js"
   },
   "repository": {
     "type": "git",
